--- a/.env.production
+++ b/.env.production
@@ -12,3 +12,6 @@ DATABASE_USERNAME=postgres
 DATABASE_HOST=containers-us-west-197.railway.app
 DATABASE_PASSWORD=JXr2hLjcSLCQQdlafYrO
 DATABASE_PORT=7767
+CLOUDINARY_NAME=dfw7f4som
+CLOUDINARY_KEY=292847499862425
+CLOUDINARY_SECRET=vZttXwtmuDU63p4cI-Tz3kxO-c4
