--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/provider-upload-cloudinary": "^4.10.7",
     "@strapi/strapi": "4.10.5",
     "better-sqlite3": "8.0.1",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "strapi-utils": "^3.6.11"
   },
   "author": {
     "name": "A Strapi developer"
