--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "better-sqlite3": "8.0.1",
     "pg": "^8.11.0",
     "strapi-plugin-populate-deep": "^2.0.0",
-    "strapi-utils": "^3.6.11"
+    "strapi-utils": "^3.6.11",
+    "uuid": "^9.0.0"
   },
   "author": {
     "name": "A Strapi developer"
